--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,10 @@
         <em>Emphasised</em>
         <b>Bold</b>
         <p>India got its independence on <em>15<sup>th</sup> August, 1947</em>.</p>
+        <ul>
+            <li>First item in the list</li>
+            <li>Second item in the list</li>
+            <li>Third item in the list</li>
+        </ul>
     </body>
 </html>
